tests/type_errors/indirect_sum_non_numeric.nos
# expect_error: type mismatch
# Generic wrapper around sum should propagate Num constraint
applySum(xs) = xs.sum()
main() = show(applySum(["a", "b"]))
